Angular_CSS_changes

--- a/frontend/src/app/component/login-dialog-alert/login-dialog-alert.component.html
+++ b/frontend/src/app/component/login-dialog-alert/login-dialog-alert.component.html
@@ -1,6 +1,11 @@
-<p><mat-icon>favorite</mat-icon> Hello Dear, Welcome to my Digital Resume!<mat-icon>favorite</mat-icon> </p>
+<h2> <mat-icon>favorite</mat-icon> Hello Dear, Welcome to my Digital Resume!<mat-icon>favorite</mat-icon> </h2>
 <br>
 
-<button mat-button color="primary"><mat-icon [mat-dialog-close]="true">check</mat-icon></button>
+<div class="close_button">
+    <button mat-raised-button color="primary"><mat-icon [mat-dialog-close]="true" class="close_button_icon">check</mat-icon></button>
+     
+
+</div>
+
 
 
