--- a/frontend/src/app/component/login/login.component.scss
+++ b/frontend/src/app/component/login/login.component.scss
@@ -48,16 +48,15 @@
 
 .form-inner h2 {
     font-size: 25px;
-    color: #ece3e3;
-    text-align: left;
+    color: #efebf3;
+    text-align: center;
     padding-top: 25px;
-    padding-left: 70px;
     font-family:Georgia, 'Times New Roman', Times, serif
 }
 
 .form-inner_header {
     font-size: 25px;
-    color: #5e5463;
+    color: #9e6cb8;
     text-align: center;
     font-weight: Bold;
 }
@@ -106,6 +105,7 @@
     left: -48%;
     animation: 5s span1 infinite linear;
     animation-delay: 1s;
+    background: #800080;
 }
 
 .form span:nth-child(2) {
@@ -116,7 +116,7 @@
 }
 
 .form span:nth-child(3) {
-    background: #800080;
+    //background: #800080;
     right: -48%;
     top: 0px;
     animation: 5s span3 infinite linear;
@@ -128,6 +128,7 @@
     right: -48%;
     animation: 5s span4 infinite linear;
     animation-delay: 1s;
+    background: #2944df;
 }
 
 @keyframes span1 {
